# hunter

./: .coverage  .gitignore  CLAUDE.md  SKILL.md  analysis.py  backtest.db  backtest.py  bnb_out.txt  btc_out.txt  check_balance.py  close_pos.py  config.py  database.py  eth_out.txt  evaluate_signals.py  execute_tool.py  execution.py  funding_arb.py  get_positions.py  hunter.db  hunter_live.db  kalman.py  learner.py  live_execution.py  macro.py  main.py  ml.py  ml_model.pkl  nautilus_engine.py  news.py  old_analysis.txt  optimizer.py  patterns.py  portfolio_risk.py  provider.py  report.py  requirements.txt  reset_account.py  rewrite_tests.py  signal_analyzer.py  (+13 more)
.agents/rules/: orchestration.md  quality.md
hunter_core/: Cargo.toml
hunter_core/src/: lib.rs
swarm/: hunter_trading_desk.yaml
tasks/: lessons.md  todo.md
tests/: test_hunter.py
